<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">


        <Button
            android:id="@+id/calcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:text="@string/calcular"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.609" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:text="@string/preu_inmboble"
            android:textSize="22sp"
            app:circularflow_defaultRadius="0dp"
            app:circularflow_radiusInDP="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.184" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:text="@string/estalvis"
            android:textSize="22sp"
            app:circularflow_defaultRadius="0dp"
            app:circularflow_radiusInDP="0dp"
            app:layout_constraintEnd_toEndOf="@+id/textView1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView1"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/euribor"
            android:textSize="22sp"
            app:circularflow_defaultRadius="0dp"
            app:circularflow_radiusInDP="0dp"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/diferencial"
            android:textSize="22sp"
            app:circularflow_defaultRadius="0dp"
            app:circularflow_radiusInDP="0dp"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/plac_anys"
            android:textSize="22sp"
            app:circularflow_defaultRadius="0dp"
            app:circularflow_radiusInDP="0dp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/preu_inmoble"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginEnd="4dp"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.182" />

        <EditText
            android:id="@+id/diferencial"
            android:layout_width="200sp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/euribor"
            app:layout_constraintTop_toBottomOf="@+id/euribor" />

        <EditText
            android:id="@+id/euribor"
            android:layout_width="200sp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="@+id/plac_anys"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/plac_anys"
            app:layout_constraintTop_toBottomOf="@+id/plac_anys" />

        <EditText
            android:id="@+id/estalvis"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="@+id/preu_inmoble"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/preu_inmoble"
            app:layout_constraintTop_toBottomOf="@+id/preu_inmoble" />

        <EditText
            android:id="@+id/plac_anys"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@+id/estalvis"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/estalvis"
            app:layout_constraintTop_toBottomOf="@+id/estalvis" />

        <TextView
            android:id="@+id/barra"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calcular"
            app:layout_constraintVertical_bias="0.175" />

        <TextView
            android:id="@+id/mes"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/Mes"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="@+id/barra"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/barra" />

        <TextView
            android:id="@+id/total"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/total"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="@+id/barra"
            app:layout_constraintEnd_toEndOf="@+id/barra"
            app:layout_constraintTop_toTopOf="@+id/barra" />

        <Spinner
            android:id="@+id/tipo_interes_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="276dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="445dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
